Fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'IBM Plex Sans', sans-serif;
-  overflow: visible;
+  overflow: hidden;
+  margin: 0 auto;
 }
 .stateMaps {
   max-width: 1400px;
